# cross_cmake_example

./: .gitmodules  CMakeLists.txt  cfg.ps1  cfg.sh  cgt-arm.sh  readme.md
cmake/: binutils-arm-none-eabi.cmake  mcu.cmake  renesas_ra.cmake  stm32f7.cmake  stm32l0.cmake  stm32l1.cmake  stm32l4.cmake  toolchain-arm-none-eabi.cmake  toolchain-cgt-arm.cmake
src/: CMakeLists.txt
src/apps/BlinkLED_MSP432P401R/: CMakeLists.txt  main.c  prev_main.c
src/apps/RA/led-blink/: CMakeLists.txt  hal_entry.c
src/apps/stm32/led-blink/: CMakeLists.txt  main.c
src/target_MSP432/MSP-EXP432P401R/: CMakeLists.txt  system_msp432p401r.c  text
src/target_MSP432/MSP-EXP432P401R/driverlib/: debug.h  interrupt.h  sysctl.h  wdt_a.c  wdt_a.h
src/target_STM32F7/STM32F746G-DISCO/: CMakeLists.txt  stm32f7xx_it.c  system_clock.c  target_stm32.h
src/target_STM32G0/NUCLEO-G071RB/: CMakeLists.txt  stm32g0xx_it.c  system_clock.c  target_stm32.h
src/target_STM32L0/B-L072Z-LRWAN1/: CMakeLists.txt  stm32l0xx_it.c  target_stm32.h
src/target_STM32L0/NUCLEO-L073RZ/: CMakeLists.txt  stm32l0xx_it.c  system_clock.c  target_stm32.h
src/target_STM32L1/NUCLEO-L152RE/: CMakeLists.txt  stm32l1xx_it.c  system_clock.c  target_stm32.h
src/target_STM32L4/NUCLEO-L476RG/: CMakeLists.txt  stm32l4xx_it.c  system_clock.c  target_stm32.h
src/target_renesas_RA/EK-RA2A1/: CMakeLists.txt  configuration.xml
src/target_renesas_RA/EK-RA2A1/ra_cfg/fsp_cfg/bsp/: bsp_cfg.h  bsp_mcu_family_cfg.h
src/target_renesas_RA/EK-RA2A1/ra_gen/: pin_data.c
